Обновил API и OpenAPI: CRUD карт, баланс, нормальная пагинация, безопасный update
