# docs/openapi.yaml
@@ -70,7 +70,7 @@ paths:
   /api/admin/users:
     get:
       tags:
-      - admin-users-controller
+      - Пользователи (админ)
       operationId: getUsers
       parameters:
       - name: page
@@ -107,7 +107,7 @@ paths:
                 $ref: "#/components/schemas/PageUserResponse"
     post:
       tags:
-      - admin-users-controller
+      - Пользователи (админ)
       operationId: createUser
       requestBody:
         content:
@@ -149,11 +149,31 @@ paths:
         required: false
         schema:
           type: string
-      - name: pageable
+      - name: page
         in: query
-        required: true
+        description: Zero-based page index (0..N)
+        required: false
         schema:
-          $ref: "#/components/schemas/Pageable"
+          type: integer
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
       responses:
         "200":
           description: OK
@@ -182,7 +202,7 @@ paths:
   /api/admin/users/{id}/role:
     patch:
       tags:
-      - admin-users-controller
+      - Пользователи (админ)
       operationId: updateRole
       parameters:
       - name: id
@@ -207,7 +227,7 @@ paths:
   /api/admin/users/{id}/password:
     patch:
       tags:
-      - admin-users-controller
+      - Пользователи (админ)
       operationId: resetPassword
       parameters:
       - name: id
@@ -228,7 +248,7 @@ paths:
   /api/admin/users/{id}/enabled:
     patch:
       tags:
-      - admin-users-controller
+      - Пользователи (админ)
       operationId: updateEnabled
       parameters:
       - name: id
@@ -250,6 +270,66 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/UserResponse"
+  /api/admin/cards/{id}:
+    get:
+      tags:
+      - Карты (админ)
+      summary: Получить карту по id
+      operationId: getById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardResponse"
+    delete:
+      tags:
+      - Карты (админ)
+      summary: Удалить карту
+      operationId: delete
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+    patch:
+      tags:
+      - Карты (админ)
+      summary: Обновить атрибуты карты (ограниченно)
+      operationId: update
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CardAdminUpdateRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardResponse"
   /api/admin/cards/{id}/block:
     patch:
       tags:
@@ -343,11 +423,31 @@ paths:
         required: false
         schema:
           type: string
-      - name: pageable
+      - name: page
         in: query
-        required: true
+        description: Zero-based page index (0..N)
+        required: false
         schema:
-          $ref: "#/components/schemas/Pageable"
+          type: integer
+          default: 0
+          minimum: 0
+      - name: size
+        in: query
+        description: The size of the page to be returned
+        required: false
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+      - name: sort
+        in: query
+        description: "Sorting criteria in the format: property,(asc|desc). Default\
+          \ sort order is ascending. Multiple sort criteria are supported."
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
       responses:
         "200":
           description: OK
@@ -355,6 +455,46 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/PageCardResponse"
+  /api/cards/{id}:
+    get:
+      tags:
+      - Карты (пользователь)
+      summary: Получить мою карту по id
+      operationId: getMyCard
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardResponse"
+  /api/cards/{id}/balance:
+    get:
+      tags:
+      - Карты (пользователь)
+      summary: Получить баланс моей карты
+      operationId: getBalance
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BalanceResponse"
   /api/admin/block-requests:
     get:
       tags:
@@ -372,11 +512,27 @@ paths:
           - WAITING
           - APPROVED
           - REJECTED
-      - name: pageable
+      - name: page
         in: query
-        required: true
+        required: false
         schema:
-          $ref: "#/components/schemas/Pageable"
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 20
+      - name: sort
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
       responses:
         "200":
           description: OK
@@ -387,8 +543,8 @@ paths:
   /api/admin/users/{id}:
     delete:
       tags:
-      - admin-users-controller
-      operationId: delete
+      - Пользователи (админ)
+      operationId: delete_1
       parameters:
       - name: id
         in: path
@@ -399,22 +555,6 @@ paths:
       responses:
         "204":
           description: No Content
-  /api/admin/cards/{id}:
-    delete:
-      tags:
-      - Карты (админ)
-      summary: Удалить карту
-      operationId: delete_1
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        "200":
-          description: OK
 components:
   schemas:
     TransferRequest:
@@ -663,21 +803,12 @@ components:
           example: false
       required:
       - enabled
-    Pageable:
+    CardAdminUpdateRequest:
       type: object
       properties:
-        page:
-          type: integer
-          format: int32
-          minimum: 0
-        size:
-          type: integer
-          format: int32
-          minimum: 1
-        sort:
-          type: array
-          items:
-            type: string
+        expirationDate:
+          type: string
+          format: date
     PageCardResponse:
       type: object
       properties:
@@ -692,6 +823,10 @@ components:
         numberOfElements:
           type: integer
           format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
         size:
           type: integer
           format: int32
@@ -704,10 +839,6 @@ components:
           format: int32
         sort:
           $ref: "#/components/schemas/SortObject"
-        first:
-          type: boolean
-        last:
-          type: boolean
         empty:
           type: boolean
     PageableObject:
@@ -715,12 +846,12 @@ components:
       properties:
         unpaged:
           type: boolean
-        pageNumber:
-          type: integer
-          format: int32
         paged:
           type: boolean
         pageSize:
+          type: integer
+          format: int32
+        pageNumber:
           type: integer
           format: int32
         offset:
@@ -737,6 +868,14 @@ components:
           type: boolean
         empty:
           type: boolean
+    BalanceResponse:
+      type: object
+      properties:
+        cardId:
+          type: string
+          format: uuid
+        balance:
+          type: number
     PageUserResponse:
       type: object
       properties:
@@ -751,6 +890,10 @@ components:
         numberOfElements:
           type: integer
           format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
         size:
           type: integer
           format: int32
@@ -763,10 +906,6 @@ components:
           format: int32
         sort:
           $ref: "#/components/schemas/SortObject"
-        first:
-          type: boolean
-        last:
-          type: boolean
         empty:
           type: boolean
     PageCardBlockRequestResponse:
@@ -783,6 +922,10 @@ components:
         numberOfElements:
           type: integer
           format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
         size:
           type: integer
           format: int32
@@ -795,10 +938,6 @@ components:
           format: int32
         sort:
           $ref: "#/components/schemas/SortObject"
-        first:
-          type: boolean
-        last:
-          type: boolean
         empty:
           type: boolean
   securitySchemes:
