# src/main/java/com/example/bankcards/controller/AdminCardBlockRequestsController.java
@@ -7,9 +7,12 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
 import java.util.UUID;
 
 @Tag(name = "Заявки на блокировку (админ)")
@@ -23,9 +26,17 @@ public class AdminCardBlockRequestsController {
     @GetMapping
     @Operation(summary = "Список заявок по статусу")
     public Page<CardBlockRequestResponse> getAll(
-            @RequestParam(defaultValue = "WAITING") CardBlockStatus status,
-            Pageable pageable
+            @RequestParam(required = false, defaultValue = "WAITING") CardBlockStatus status,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size,
+            @RequestParam(required = false) List<String> sort
     ) {
+        Sort s = Sort.unsorted();
+        if (sort != null && !sort.isEmpty()) {
+            s = Sort.by(sort.stream().map(Sort.Order::by).toList());
+        }
+
+        Pageable pageable = PageRequest.of(page, size, s);
         return service.getAll(status, pageable);
     }
 
