# src/main/java/com/example/bankcards/dto/card/CardAdminUpdateRequest.java
@@ -1,14 +1,11 @@
 package com.example.bankcards.dto.card;
 
-import com.example.bankcards.entity.card.BankCardStatus;
 import jakarta.validation.constraints.FutureOrPresent;
 
 import java.time.LocalDate;
 
 public record CardAdminUpdateRequest(
         @FutureOrPresent(message = "expirationDate должна быть в будущем или сегодня")
-        LocalDate expirationDate,
-
-        BankCardStatus status
+        LocalDate expirationDate
 ) {}
 
